force-app/main/default/objects/Employee_Customer_Assignment__c/Employee_Customer_Assignment__c.object-meta.xml
<CustomObject>
    <label>Employee Customer Assignment</label>
    <nameField>
        <displayFormat>ECA-{0000}</displayFormat>
        <label>Customer Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Customer Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>