force-app/main/default/objects/Employee_Customer_Assignment__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employee Customer Assignments</relationshipLabel>
    <relationshipName>Employee_Customer_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>