force-app/main/default/objects/Employee_Customer_Assignment__c/fields/Customer_Executive_Pair__c.field-meta.xml
<CustomField>
    <fullName>Customer_Executive_Pair__c</fullName>
    <formula>CASESAFEID(Customer__c ) +&apos;-&apos;+ CASESAFEID(Executive__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer_Executive_Pair</label>
    <type>Text</type>
</CustomField>