force-app/main/default/objects/Employee_Customer_Assignment__c/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <formula>Employee__r.Employee_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Executive Employee Code</label>
    <type>Text</type>
</CustomField>