force-app/main/default/objects/Employee_Customer_Assignment__c/fields/Primary_Customer_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_SAP_Code__c</fullName>
    <formula>Customer__r.SAP_Customer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Customer SAP Code</label>
    <type>Text</type>
</CustomField>