force-app/main/default/objects/Employee_Customer_Assignment__c/fields/Reporting_Manager_Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager_Employee_Code__c</fullName>
    <formula>IF(NOT(ISBLANK(Executive__c)),CASESAFEID(Executive__r.Manager.Employee_Code__c), CASESAFEID(Employee__r.Reporting_Manager__r.Employee_Code__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager Employee Code</label>
    <type>Text</type>
</CustomField>