force-app/main/default/objects/Employee_Customer_Assignment__c/fields/Reporting_Manager_Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager_Employee_Id__c</fullName>
    <formula>IF(NOT(ISBLANK(Executive__c)),CASESAFEID(Executive__r.ManagerId), CASESAFEID( Employee__r.Reporting_Manager__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Manager Employee Id</label>
    <type>Text</type>
</CustomField>