force-app/main/default/objects/Employee_Customer_Assignment__c/validationRules/Mandate_Employee.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_Employee</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Employee__c) &amp;&amp; ISBLANK(Executive__c)</errorConditionFormula>
    <errorMessage>Please select the executive</errorMessage>
</ValidationRule>