force-app/main/default/objects/Employee_Customer_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Employee__c</columns>
    <columns>Executive__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Customer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>